# Django-Test

./: Dockerfile  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
dogs/: settings.py  urls.py
mascotas/: admin.py  models.py  serializers.py  urls.py  views.py
mascotas/migrations/: 0001_initial.py
mascotas/test/: test_views.py
